# morph-reth

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  MakefileEc2.mk  README.md  deny.toml  typos.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/assets/: label_pr.js
.github/workflows/: build.yml  deny.yml  docker.yml  lint.yml  pr-title.yml  release.yml  test.yml
crates/chainspec/res/genesis/: hoodi.json  mainnet.json
crates/chainspec/src/: constants.rs  genesis.rs  hardfork.rs  morph.rs  morph_hoodi.rs  spec.rs
crates/consensus/src/: error.rs  validation.rs
crates/engine-api/: Cargo.toml
crates/engine-api/src/: api.rs  builder.rs  error.rs  lib.rs  rpc.rs  validator.rs
crates/evm/: Cargo.toml
crates/evm/src/: assemble.rs  config.rs  engine.rs  evm.rs  lib.rs
crates/evm/src/block/: mod.rs  receipt.rs
crates/node/: Cargo.toml
crates/node/src/: add_ons.rs  args.rs  lib.rs  node.rs  test_utils.rs  validator.rs
crates/node/src/components/: pool.rs
crates/node/tests/assets/: test-genesis.json
crates/node/tests/it/: block_building.rs  consensus.rs  engine.rs  evm.rs  hardfork.rs  helpers.rs  l1_messages.rs  main.rs  morph_tx.rs  rpc.rs  sync.rs  txpool.rs
crates/payload/builder/src/: builder.rs  error.rs  lib.rs
crates/payload/types/: Cargo.toml
crates/payload/types/src/: attributes.rs  executable_l2_data.rs  lib.rs  params.rs  safe_l2_data.rs
crates/primitives/src/: header.rs
crates/primitives/src/receipt/: envelope.rs  mod.rs
crates/primitives/src/transaction/: envelope.rs  l1_transaction.rs  morph_transaction.rs
crates/revm/: Cargo.toml
crates/revm/src/: error.rs  evm.rs  handler.rs  l1block.rs  precompiles.rs  token_fee.rs  tx.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: error.rs  eth_config.rs  lib.rs
crates/rpc/src/eth/: mod.rs  receipt.rs  transaction.rs
crates/rpc/src/types/: receipt.rs  request.rs  transaction.rs
crates/txpool/src/: error.rs  maintain.rs  morph_tx_validation.rs  transaction.rs  validator.rs
local-test/: .gitignore  README.md  common.sh  geth-start.sh  geth-stop.sh  node-start.sh  node-stop.sh  prepare.sh  reset.sh  reth-start.sh  reth-stop.sh  start-all.sh  status.sh  stop-all.sh  sync-test.sh
