[package]
name = "morph-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Morph crates
morph-chainspec.workspace = true
morph-consensus.workspace = true
morph-engine-api.workspace = true
morph-evm.workspace = true
morph-payload-builder.workspace = true
morph-payload-types.workspace = true
morph-primitives = { workspace = true, features = ["reth-codec"] }
morph-rpc.workspace = true
morph-txpool.workspace = true

# Reth dependencies
reth-db.workspace = true
reth-chainspec.workspace = true
reth-engine-local.workspace = true
reth-engine-tree.workspace = true
reth-errors.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-node-ethereum.workspace = true
reth-payload-builder.workspace = true
reth-payload-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-provider.workspace = true
reth-rpc-builder.workspace = true
reth-rpc-eth-api.workspace = true
reth-transaction-pool.workspace = true
reth-tracing.workspace = true
reth-trie.workspace = true

# Alloy
alloy-consensus.workspace = true
alloy-genesis.workspace = true
alloy-hardforks.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-eth.workspace = true

# Async
eyre.workspace = true
clap.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
tokio-stream.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Optional: E2E testing framework
reth-e2e-test-utils = { workspace = true, optional = true }
reth-tasks = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync"], optional = true }
alloy-eips = { workspace = true, optional = true }
alloy-rlp = { workspace = true, optional = true }
alloy-signer = { workspace = true, optional = true }
alloy-signer-local = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
reth-db = { workspace = true, features = ["test-utils"] }
reth-e2e-test-utils.workspace = true
reth-node-core.workspace = true
reth-payload-primitives.workspace = true
reth-tasks.workspace = true
reth-tracing.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-eth.workspace = true
jsonrpsee.workspace = true
morph-payload-types.workspace = true
morph-primitives.workspace = true
serde_json.workspace = true

[[test]]
name = "it"
path = "tests/it/main.rs"
required-features = ["test-utils"]

[features]
default = []
test-utils = [
    "dep:reth-e2e-test-utils",
    "dep:reth-tasks",
    "dep:alloy-signer",
    "dep:tokio",
    "dep:alloy-eips",
    "dep:alloy-rlp",
    "dep:alloy-signer-local",
]
